# ai-demo

./: .cursorignore  .cursorrules  .dockerignore  .editorconfig  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  __init__.py  app.py  app.py.bak  cli.py  main.py  pyproject.dev.toml  pyproject.toml  requirements.txt  run.py  setup.py
backend/api/v1/: api.py  health.py  models.py
backend/api/v1/endpoints/: __init__.py  auth.py  users.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/endpoints/: auth.py  users.py
backend/app/core/: config.py  security.py
backend/app/models/: user.py
backend/app/routes/: api.py  auth.py  main.py
backend/app/schemas/: token.py  user.py
backend/app/templates/: base.html  index.html
backend/config/: database.py  default.yaml  default.yaml.example  development.yaml  production.yaml  settings.py
backend/models/: user.py
backend/schemas/: auth.py
backend/scripts/: init_db.py  manage.sh  run.sh  start.sh
backend/utils/: auth.py
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md
docs/deployment/: README.md
docs/development/: README.md
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  index.tsx  setupProxy.js  setupTests.ts
frontend/src/components/Layout/: index.tsx
frontend/src/services/: auth.ts
frontend/src/styles/: base.css  variables.css
(+3 files in other folders)
